--- a/scss/app.scss
+++ b/scss/app.scss
@@ -98,7 +98,6 @@ $breakPointLists: 0px, 425px, 576px, 768px, 992px, 1200px, 1400px, 1800px;
     }
 }
 
-
 // fluid fonts
 @function strip-unit($value) {
     @return $value / ($value * 0 + 1);
@@ -214,20 +213,63 @@ body {
     margin-bottom: 20px;
     border-radius: 1px;
     box-shadow: 0px 0px 10px #e3e3e3, 0px 0px 10px #e3e3e3;
-    @include resp($sm) {
-        padding: 25px 5px 25px 15px;
+    @include resp($xs) {
+        padding: 22px;
     }
+    @include resp($sm) {
+        padding: 28px;
+    }
+    @include resp($md) {
+        padding: 25px 35px;
+    }
+    @include resp ($xl) {
+        margin-bottom: 25px;
+    }
+    @include resp ($xxl) {
+        padding: 30px;
+        margin-bottom: 30px;
+    }
+
     &:hover {
         box-shadow: 1px 1px 4px #c8c8c8, -1px -1px 4px #c8c8c8;
         transform: scale(1.05);
+        @include resp ($lg) {
+            transform: scale(1.025);
+        }
     }
     h5 {
-        font-size: 14.5px;
+        font-size: 16px;
+        @include resp($md) {
+            font-size: 18px;
+        }
+        @include resp ($xl) {
+            font-size: 19px;
+        }
+        @include resp ($xxl) {
+            font-size: 20px;
+        }
+        
     }
     // paragraph
     .para {
         margin-top: 3px;
-        font-size: 12.5px;
+        font-size: 14px;
+        @include resp($sm) {
+            font-size: 15px;
+            margin-top: 5px;
+        }
+        @include resp($md) {
+            font-size: 17px;
+        }
+        @include resp ($lg) {
+            font-size: 16px;
+        }
+        @include resp ($xl) {
+            font-size: 17px;
+        }
+        @include resp ($xxl) {
+            font-size: 18px;
+        }
     }
 }
 
@@ -240,10 +282,53 @@ body {
 
 // quote section
 .quotes {
+    // texts 
     .texts {
+        line-height: 120%;
         .quote_text {
             font-family: 14px;
             display: inline-block;
+            @include fSmallToLarge(14px, 29px);
+            @include resp($xs) {
+                line-height: 135%;
+            }
+            @include resp($sm) {
+                font-size: 22px;
+                text-align: right!important;
+            }
+            @include resp($md) {
+                font-size: 24px;
+            }
+            @include resp($lg) {
+                font-size: 22px;
+            }
+            @include resp ($xl) {
+                font-size: 26.5px;
+            }
+            @include resp ($xxl) {
+                font-size: 30px;
+            }
+        }
+    }
+    // quotes owner 
+    .quotes_owner {
+        font-size: 14px;
+        margin-top: 10px;
+        margin-bottom: 0px;
+        @include resp ($sm) {
+            text-align: right!important;
+        }
+        @include resp ($lg) {
+            margin-top: 31px;
+        }
+        @include fSmallToLarge(14px, 22px);
+        @include resp ($xl) {
+            margin-top: 25px;
+            font-size: 25px;
+        }
+        @include resp ($xxl) {
+            font-size: 28px;
+            margin-top: 40px;
         }
     }
 }
@@ -297,6 +382,19 @@ body {
     font-family: $bold;
     // font-size: 25px;
     @include fSmallToLarge(25px, 55px);
+    @include resp ($lg) {
+        margin-top: 25px!important;
+    }
+    @include resp ($xl) {
+        margin-top: 30px!important;
+    }
+    @include resp ($xxl) {
+        font-size: 60px!important;
+        margin-top: 49px!important;
+    }
+    @include resp ($xxl) {
+        font-size: 82px!important;
+    }
 }
 
 // section description
@@ -305,7 +403,14 @@ body {
     span {
         // font-size: 17px;
         @include fSmallToLarge(17px, 35px);
+        @include resp ($xl) {
+            font-size: 30px!important;
+        }
+        @include resp ($xxl) {
+            font-size: 35px!important;
+        }
     }
+
 }
 
 p,
@@ -459,6 +564,7 @@ main {
             grid-template-rows: repeat(6, 1fr);
             align-items: flex-start;
             margin-top: 45px;
+            padding-bottom: 50px!important;
         }
         @include resp($xl) {
             margin-top: 65px;
@@ -699,39 +805,82 @@ main {
             "firstLists"
             "quotes"
             "secLists";
+        grid-row-gap: 10px;
         // @include resp ($sm) {
         //     grid-tem
         // }
         @include resp($lg) {
-            grid-template-columns: 1fr repeat(3, 0.33fr) 1fr;
+            grid-template-columns: 1fr repeat(4, 0.25fr) 1fr;
             grid-template-rows: 1fr 3.25fr;
+            grid-template-areas: initial;
+            grid-gap: 45px 20px;
+            // padding 
+            padding-top: 130px!important;
+            padding-bottom: 50px!important;
+        }
+        @include resp ($xl) {
+            grid-gap: 55px 25px;
+        }
+        @include resp($xxl) {
+            grid-gap: 55px 30px;
         }
         // main heading ------------------
         .main_heading {
             grid-area: mainHeading;
+            @include resp($lg) {
+                grid-row: 1/2;
+                grid-column: 1/6;
+            }
             // smb
             .s_head_ti {
             }
             // section highlight
-            .section_highlight {
+            .section_heading {
+                @include resp($lg) {
+                    font-size: 50px;
+                    margin-top: 8px;
+                }
             }
             // tittle description
-            .tittle_description {
-                font-size: 18px;
+            .section_description {
+                span {
+                    @include resp($lg) {
+                        font-size: 26px;
+                    }
+                }
             }
         }
         // first lists
         .first_card_list {
             grid-area: firstLists;
+            @include resp($lg) {
+                grid-area: initial;
+                grid-row: 2/3;
+                grid-column: 4/-1;
+            }
         }
         // secound list
         .quotes {
             grid-area: quotes;
-            max-width: 400px;
+            @include resp($lg) {
+                grid-row: 1/2;
+                grid-column: 2/-1;
+            }
+            .quote_text {
+                @include resp($sm) {
+                    max-width: initial;
+                }
+                
+            }
         }
         // sec list
         .sec_card_list {
             grid-area: secLists;
+            @include resp($lg) {
+                grid-area: initial;
+                grid-row: 2/3;
+                grid-column: 1/4;
+            }
         }
     }
 }
